fixed small bug with overlapping elements

--- a/portfolio/src/styles/globals.css
+++ b/portfolio/src/styles/globals.css
@@ -14,6 +14,10 @@
         after:h-0.5 after:bg-yellow-100 after:w-full after:scale-x-0 
         after:hover:scale-x-100 after:transition after:duration-200 after:origin-center
     }
+    /* Wrapper container used across each section */
+    .wrapper {
+        @apply flex-none w-screen h-offset 
+    }
 }
 
 @layer utilities {
